[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-queue = "2.2.0"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
bzip2 = "0.5.0"
futures-util = "0.3.31"
glob = "0.3.1"
indicatif = "0.17.9"
lazy_static = "1.5.0"
lockfree = "0.5.1"
maplit = "1.0.2"
nix = { version = "0.29.0", features = ["fs","mount"] }
path-clean = "1.0.1"
regex = "1.10.6"
reqwest = { version = "0.12.11", features = ["blocking", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sha256 = "1.5.0"
shlex = "1.3.0"
sled = "0.34.7"
tar = { version = "0.4.41", path = "../tar-rs-reproducible" }
tempfile = "3.12.0"
walkdir = "2.5.0"
zip = "2.2.0"
zmq = "0.10.0"
